[Write] 글쓰기 등록후 해당 카테고리 게시판으로 이동되도록 수정

--- a/src/main/webapp/board/noticeBoardReg.html
+++ b/src/main/webapp/board/noticeBoardReg.html
@@ -65,10 +65,11 @@
 				<td style="width: 20%;">작성일</td>
 				<td class="current_date"></td>
 				<td>
-					<select id="category_list" style="width: 85%; height: 70%; color: black;">
-						<option>--카테고리 선택--</option>
+					<select id="category_list_notice" style="width: 85%; height: 70%; color: black;">
 						<option class="notice" value="team_notice">팀 내부 공지사항</option>
 						<option class="notice" value="work_notice">업무 관련 공지사항</option>
+					</select>
+					<select id="category_list_product" style="width: 85%; height: 70%; color: black;">
 						<option class="product_issue" value="sat">SAT</option>
 						<option class="product_issue" value="room_speaker">ROOM SPEAKER</option>
 						<option class="product_issue" value="multiroom">MULTIROOM APP</option>
@@ -78,7 +79,6 @@
 						<option class="product_issue" value="ss_connect">SAMSUNG CONNECT</option>
 						<option class="product_issue" value="convergence">CONVERGENCE</option>
 						<option class="product_issue" value="alexa">ALEXA</option>
-						
 					</select>
 				</td>
 			</tr>
