--- a/src/main/webapp/board/noticeBoard.html
+++ b/src/main/webapp/board/noticeBoard.html
@@ -38,7 +38,7 @@
     		
     		<div class="content_area">
 		      <div class="btn_wrap">
-		        <input type="button" style="width:70px; height:30px;" value="글쓰기" onclick="location.href='noticeBoardReg.html'" />
+		        <input type="button" id="write_btn" style="width:70px; height:30px;" value="글쓰기" />
 		        <input type="submit" value="검색" style="float: right; height: 30px; width: 50px;" />
 		        <input type="text" style="float: right; width: 250px;height: 30px;" placeholder="검색 기능은 나중에 추가 할거에요"/>
 		      </div>
