--- a/src/main/webapp/board/noticeBoard.html
+++ b/src/main/webapp/board/noticeBoard.html
@@ -60,7 +60,7 @@
 				{{#data.require}}
 					<tr style="background: blanchedalmond;">
             		<td data-no="{{boardNo}}">--</td>
-            		<td><a href="noticeBoardDetail.html?no={{boardNo}}"><span style="color:red;">[필독]</span>{{title}}</a><span style="color:#FF8000; ">[0]</span></td>
+            		<td><a href="noticeBoardDetail.html?no={{boardNo}}"><span style="color:red;">[필독]</span>{{title}}</a><span style="color:#FF8000; "> [{{commentCount}}]</span></td>
             		<td>{{userName}}</td>
             		<td>{{date}}</td>
          			</tr>
@@ -69,7 +69,7 @@
 				{{#data.noReq}}
 					<tr style="background-color: #F0F0F0;">
             		<td data-no="{{boardNo}}">{{showNo}}</td>
-            		<td><a href="noticeBoardDetail.html?no={{boardNo}}">{{title}}</a><span style="color:#FF8000; ">[0]</span></td>
+            		<td><a href="noticeBoardDetail.html?no={{boardNo}}">{{title}}</a><span style="color:#FF8000; "> [{{commentCount}}]</span></td>
             		<td>{{userName}}</td>
             		<td>{{date}}</td>
          			</tr>
