[Board] 익명 게시판 추가

--- a/src/main/webapp/board/noticeBoardReg.html
+++ b/src/main/webapp/board/noticeBoardReg.html
@@ -31,8 +31,12 @@
       			<h1 class="logo-name" style="font-size: 150px;">AV+</h1>
     		</div>
     		<div class="required_wrap">
-      		<input type="checkbox" id = "required_box" class="required_box" value="required"> 필독
-			</div>
+      			<input type="checkbox" id = "required_box" class="required_box" value="required"> 필독
+      		</div>
+			
+			<div class="show_wrap" style="display: none">
+      			<input type="checkbox" id = "show_box" class="show_box" value="show"> 이름 공개
+      		</div>
 			
     		<table id="teamNoticeBoard">
 
