--- a/src/main/webapp/common_html/nav_bar.html
+++ b/src/main/webapp/common_html/nav_bar.html
@@ -47,7 +47,7 @@ $(".nav li").click(function(){
 
 <div class='title'>
 <a href="../main/Mainpage.html">HQTECH<br></a>
-<div class="user_info"><span><a class="nav_user_name" href=""></a></span><span class="logout_area"><a href="" class="logout_btn"></a></span></div>
+<div class="user_info"><span><a class="nav_user_name" href="../user/mypage.html"></a></span><span class="logout_area"><a href="" class="logout_btn"></a></span></div>
 </div>
 <ul class='nav'>
 	<li class="notice_dropdown"><a href="../board/noticeBoard.html?type=notice&pageNo=1">공지사항</a>
