--- a/src/main/webapp/user/mypage.html
+++ b/src/main/webapp/user/mypage.html
@@ -13,6 +13,7 @@
 <script src="../node_modules/handlebars/handlebars-v4.0.11.js"></script>
 <script src="../lib/js/common.js"></script>
 <script src="../node_modules/handlebars/handlebars-v4.0.11.js"></script>
+<script src="../lib/js/mypage.js"></script>
 <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css"
 	rel="stylesheet" />
 <link href="../lib/css/animate.css" rel="stylesheet" />
@@ -65,7 +66,7 @@
 			      <tr class="hqttr">
 			        <td class="hqttd1">부서</td>
 			        <td class="hqttd2">
-			          <select id="user_department" >
+			          <select id="user_department" class="form-control" >
 			            <option value=0>-</option>
 			            <option value=1>AV팀</option>
 			            <option value=2>TV팀</option>
@@ -78,7 +79,7 @@
 			      <tr class="hqttr" style="background-color: #F0F0F0;">
 			        <td class="hqttd1">직급</td>
 			        <td class="hqttd2">
-			          <select id="user_position" >
+			          <select id="user_position" class="form-control" >
 			            <option value=0>-</option>
 			            <option value=1>팀장</option>
 			            <option value=2>수석</option>
