[Nav] 전체 프로덕트 페이지 링크 추가

--- a/src/main/webapp/common_html/nav_bar.html
+++ b/src/main/webapp/common_html/nav_bar.html
@@ -57,7 +57,7 @@ $(".nav li").click(function(){
 		</ul>
 	</li>
 	<li><a href="../board/noticeBoard.html?type=common_issue&pageNo=1">시장이슈</a></li>
-	<li class="issue_dropdown"><a href="">제품별 사양 및 이슈</a>
+	<li class="issue_dropdown"><a href="../board/noticeBoard.html?type=product_issue&pageNo=1">제품별 사양 및 이슈</a>
 		<ul class="issue_content">
 			<li><a href="../board/noticeBoard.html?cat=sat&pageNo=1">SAT</a></li>
 			<li><a href="../board/noticeBoard.html?cat=room_speaker&pageNo=1">ROOM SPEAKER</a></li>
