--- a/src/main/webapp/board/noticeBoardDetail.html
+++ b/src/main/webapp/board/noticeBoardDetail.html
@@ -53,8 +53,9 @@
 			        </tr>
 			        <tr class="btn_area">
 						<td colspan="5">
-							<input type="submit" class="btn btn-danger delete_btn" onclick="javascript: ajaxDeleteBoard();" value="삭제"> 
-							<input type="submit" class="btn btn-info modify_btn" onclick="javascript: movoToUpdate();" value="수정">
+							<input type="submit" class="btn btn-danger delete_btn login_user_btn" onclick="javascript: ajaxDeleteBoard();" value="삭제"> 
+							<input type="submit" class="btn btn-info modify_btn login_user_btn" onclick="javascript: moveToUpdate();" value="수정">
+							<input type="submit" class="btn btn-info list_btn" onclick="javascript: moveToList();" value="목록">
 						</td>
 					</tr>
 			        
