[Main] 링크 주소 오류 수정

--- a/src/main/webapp/main/Mainpage.html
+++ b/src/main/webapp/main/Mainpage.html
@@ -86,7 +86,7 @@
 			      </tr>
 			    {{/workNoReq}}
 			      <tr>
-			        <td colspan="3" style="text-align: right; padding-right: 15px;"><a href="../board/noticeBoard.html?cat=team_notice&pageNo=1">More</a></td>
+			        <td colspan="3" style="text-align: right; padding-right: 15px;"><a href="../board/noticeBoard.html?cat=work_notice&pageNo=1">More</a></td>
 			      </tr>
 				</script>
 				
