--- a/src/main/webapp/user/login.html
+++ b/src/main/webapp/user/login.html
@@ -41,7 +41,7 @@
             <h3>AV Assurance Board+</h3>
             <form id="login-form">
             <div class="form-group">
-                <input type="id" class="form-control" placeholder="아이디" required="" id="txtLoginId" value="admin@zikgong.co.kr"  />
+                <input type="id" class="form-control" placeholder="아이디" required="" id="txtLoginId" />
             </div>
             <div class="form-group">
                 <input type="password" class="form-control" placeholder="비밀번호" required="" id="txtPassword" />
