[Board & Menu] 하위 카테고리 게시물 리스트 페이지에 display No 잘못 출력 되던 것 수정 & 내공간 이름 변경 (내공간 -> 나의 업무 공간)

--- a/src/main/webapp/board/noticeBoardReg.html
+++ b/src/main/webapp/board/noticeBoardReg.html
@@ -59,7 +59,7 @@
 						<option value="free">자유 게시판</option>
 						<option value="pc_helper">PC 도움방</option>
 						<option value="about_work_site">업무 관련 사이트</option>
-						<option value="my_place">내공간</option>
+						<option value="my_place">나의 업무 공간</option>
 					</select>
 				</td>
 			</tr>
