--- a/src/main/webapp/common_html/nav_bar.html
+++ b/src/main/webapp/common_html/nav_bar.html
@@ -77,7 +77,8 @@ $(".nav li").click(function(){
 	<li><a href="../board/noticeBoard.html?type=free&pageNo=1">자유 게시판</a></li>
 	<li><a href="../board/noticeBoard.html?type=pc_helper&pageNo=1">PC 도움방</a></li>
 	<li><a href="../board/noticeBoard.html?type=about_work_site&pageNo=1">업무 관련 사이트</a></li>
-	<li><a href="../board/noticeBoard.html?type=my_place&pageNo=1">내공간</a></li>
+	<li><a href="../board/noticeBoard.html?type=my_place&pageNo=1">나의 업무 공간</a></li>
+	
 	<li><a href="../admin/adminPage.html" style="display: none;" class="admin_menu">관리자 페이지</a></li>
 </ul>
 
