[Menu] 기타 업무 공유 메뉴 추가 (+기능)

--- a/src/main/webapp/board/noticeBoardReg.html
+++ b/src/main/webapp/board/noticeBoardReg.html
@@ -54,6 +54,7 @@
 						<option value="common_issue">시장이슈</option>
 						<option value="product_issue">제품별 시장 이슈</option>
 						<option value="process">업무프로세스</option>
+						<option value="etc_work">기타 업무 공유</option>
 						<option value="product_term">제품 관련 용어 정리</option>
 						<option value="no_name">익명 게시판</option>
 						<option value="free">자유 게시판</option>
@@ -83,6 +84,10 @@
 						<option class="product_issue" value="ss_connect">SAMSUNG CONNECT</option>
 						<option class="product_issue" value="convergence">CONVERGENCE</option>
 						<option class="product_issue" value="alexa">ALEXA</option>
+					</select>
+					<select id="category_list_etc" style="width: 85%; height: 70%; color: black;">
+						<option class="etc_work" value="etc_work">업무</option>
+						<option class="etc_work" value="etc_nonwork">비업무</option>
 					</select>
 				</td>
 			</tr>
