[관리자페이지] 어드민 변경 기능 추가

--- a/src/main/webapp/admin/adminPage.html
+++ b/src/main/webapp/admin/adminPage.html
@@ -53,7 +53,9 @@
 								<td>게시글 수</td>
 								<td>Level</td>
 								<td>관리자</td>
-								<td>승인여부</td>
+								<td>관리자 승인</td>
+								<td>회원승인여부</td>
+								<td>회원 승인</td>
 							</tr>
 						</thead>		
 						<tbody clss="user_list_body">
@@ -64,9 +66,21 @@
 					      	<td style="width:10%;">{{userID}}</td>
 					      	<td style="width:10%;">{{department}}</td>
 					      	<td style="width:10%;">{{position}}</td>
-							<td style="width:10%;">10</td>
+							<td style="width:10%;">{{writeCount}}</td>
 							<td style="width:10%;">50</td>
-					      	<td style="width:5%;">{{admin}}</td>
+
+							{{#if admin}}
+					      	<td style="width:5%; color:blue;">Y</td>
+							<td style="width:5%;" >
+								<input type="submit" class="btn btn-danger write_btn" onclick="javascript: setAdminUser({{memberNo}}, false); return false;" value="취소">
+							</td>
+							{{else}}
+							<td style="width:5%; color:red;">N</td>
+							<td style="width:5%;" >
+								<input type="submit" class="btn btn-success write_btn" onclick="javascript: setAdminUser({{memberNo}}, true); return false;" value="승인">
+							</td>
+							{{/if}}
+
 							{{#if permission}}
 							<td style="width:5%; color:blue;">Y</td>
 							<td style="width:5%;" data-no={{memberNo}}></td>
