[UI 변경] Bootstrap Theme로 변경

--- a/src/main/webapp/common_html/nav_bar.html
+++ b/src/main/webapp/common_html/nav_bar.html
@@ -8,7 +8,8 @@
 
 <title></title>
 
-<script src="../lib/js/nav.js"></script>
+<script data-main="../lib/js/require/requireConfig" src="../lib/js/require/require.js"></script>
+<script src="../lib/js/nav/nav.js"></script>
 <script type="text/javascript">
 $(function(){
   $('.notice_dropdown').mouseenter(function(){
