--- a/src/main/webapp/user/signup.html
+++ b/src/main/webapp/user/signup.html
@@ -8,11 +8,12 @@
 
     <title>HQTech AV Team | SingUp</title>
 
-    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
-    <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <script data-main="../lib/js/require/requireConfig" src="../lib/js/require/require.js"></script>
+<!--     <script src="../node_modules/jquery/dist/jquery.min.js"></script> -->
+    <link href="../lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="../lib/css/animate.css" rel="stylesheet"/>
     <link href="../lib/css/style.css" rel="stylesheet"/>
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<!--     <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script> -->
     <script src="../lib/js/user.js"></script>
     
 <style>
@@ -110,7 +111,7 @@
     <br>
     <br>
     <div style="margin: 0 auto; width: 350px;">
-      <input type="submit" class="signbtn" onclick="javascript:fnSignUp();" value="회원가입">
+      <input type="button" class="signbtn" onclick="" value="회원가입" style="cursor:pointer">
       <p class="m-t" style="text-align: center;"> <small>sse & yc &copy; 2017</small> </p>
     </div>
 <!--     </form> -->
