--- a/src/main/webapp/main/Mainpage.html
+++ b/src/main/webapp/main/Mainpage.html
@@ -7,13 +7,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <title>MainPage</title>
-
-<script src="../node_modules/jquery/dist/jquery.min.js"></script>
-<script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="../node_modules/handlebars/handlebars-v4.0.11.js"></script>
-<script src="../lib/js/common.js"></script>
+<!-- <script src="../lib/js/handlebars/handlebars-v4.0.11.js"></script> -->
+<script data-main="../lib/js/require/requireConfig" src="../lib/js/require/require.js"></script>
 <script src="../lib/js/main.js"></script>
-<link href="../node_modules/bootstrap/dist/css/bootstrap.min.css"
+<link href="../lib/bootstrap/dist/css/bootstrap.min.css"
 	rel="stylesheet" />
 <link href="../lib/css/animate.css" rel="stylesheet" />
 <link href="../lib/css/main.css" rel="stylesheet" />
