[BoardList] boardList 출력

--- a/src/main/webapp/common_html/gnb.html
+++ b/src/main/webapp/common_html/gnb.html
@@ -25,7 +25,7 @@
                           </div>
                       </div>
                       <div class="inbox-body">
-                          <a href="#" data-toggle="modal"  title="Compose"    class="btn btn-compose">
+                          <a href="#" data-toggle="modal"  title="Compose" class="btn btn-compose logout_btn">
                               Logout
                           </a>
                           
