--- a/src/main/webapp/common_html/gnb.html
+++ b/src/main/webapp/common_html/gnb.html
@@ -32,56 +32,56 @@
                       </div>
                       <ul class="inbox-nav inbox-divider">
                           <li class="notice_dropdown">
-                              <a href="#"><i class="fa fa-newspaper-o"></i> 공지사항 </a>
+                              <a href="../board/boardList.html?type=notice&pageNo=1"><i class="fa fa-newspaper-o"></i> 공지사항 </a>
                                 <ul class="notice_content" >
-									<li><a href="../board/noticeBoard.html?cat=team_notice&pageNo=1">팀 내 공지사항</a></li>
-									<li><a href="../board/noticeBoard.html?cat=work_notice&pageNo=1">업무 관련 공지사항</a></li>
+									<li><a href="../board/boardList.html?cat=team_notice&pageNo=1">팀 내 공지사항</a></li>
+									<li><a href="../board/boardList.html?cat=work_notice&pageNo=1">업무 관련 공지사항</a></li>
 							    </ul>
                           </li>
                           <li>
-                              <a href="#"><i class="fa fa-exclamation-circle"></i> 시장이슈</a>
+                              <a href="../board/boardList.html?type=common_issue&pageNo=1"><i class="fa fa-exclamation-circle"></i> 시장이슈</a>
                           </li>
                           <li class="issue_dropdown">
-                              <a href="#"><i class="fa fa-cubes"></i> 제품별 사양 및 이슈</a>
+                              <a href="../board/boardList.html?type=product_issue&pageNo=1"><i class="fa fa-cubes"></i> 제품별 사양 및 이슈</a>
                               <ul class="issue_content">
-								<li><a href="../board/noticeBoard.html?cat=sat&pageNo=1">SAT</a></li>
-								<li><a href="../board/noticeBoard.html?cat=room_speaker&pageNo=1">ROOM SPEAKER</a></li>
-								<li><a href="../board/noticeBoard.html?cat=multiroom&pageNo=1">MULTIROOM APP</a></li>
-								<li><a href="../board/noticeBoard.html?cat=band&pageNo=1">BAND APP</a></li>
-								<li><a href="../board/noticeBoard.html?cat=bd_hes&pageNo=1">BD/HES</a></li>
-								<li><a href="../board/noticeBoard.html?cat=pvr&pageNo=1">PVR</a></li>
-								<li><a href="../board/noticeBoard.html?cat=ss_connect&pageNo=1">SAMSUNG CONNECT</a></li>
-								<li><a href="../board/noticeBoard.html?cat=convergence&pageNo=1">CONVERGENCE</a></li>
-								<li><a href="../board/noticeBoard.html?cat=alexa&pageNo=1">ALEXA</a></li>
+								<li><a href="../board/boardList.html?cat=sat&pageNo=1">SAT</a></li>
+								<li><a href="../board/boardList.html?cat=room_speaker&pageNo=1">ROOM SPEAKER</a></li>
+								<li><a href="../board/boardList.html?cat=multiroom&pageNo=1">MULTIROOM APP</a></li>
+								<li><a href="../board/boardList.html?cat=band&pageNo=1">BAND APP</a></li>
+								<li><a href="../board/boardList.html?cat=bd_hes&pageNo=1">BD/HES</a></li>
+								<li><a href="../board/boardList.html?cat=pvr&pageNo=1">PVR</a></li>
+								<li><a href="../board/boardList.html?cat=ss_connect&pageNo=1">SAMSUNG CONNECT</a></li>
+								<li><a href="../board/boardList.html?cat=convergence&pageNo=1">CONVERGENCE</a></li>
+								<li><a href="../board/boardList.html?cat=alexa&pageNo=1">ALEXA</a></li>
 							</ul>
                           </li>
                           <li class="etc_dropdown">
-                              <a href="#"><i class=" fa fa-window-restore"></i> 기타 업무 공유 </a>
+                              <a href="../board/boardList.html?type=etc_work&pageNo=1"><i class=" fa fa-window-restore"></i> 기타 업무 공유 </a>
                           	<ul class="etc_content">
-								<li><a href="../board/noticeBoard.html?cat=team_notice&pageNo=1">업무</a></li>
-								<li><a href="../board/noticeBoard.html?cat=work_notice&pageNo=1">비업무</a></li>
+								<li><a href="../board/boardList.html?cat=team_notice&pageNo=1">업무</a></li>
+								<li><a href="../board/boardList.html?cat=work_notice&pageNo=1">비업무</a></li>
 							</ul>
                           </li>
                           <li>
-                              <a href="#"><i class=" fa fa-refresh"></i> 업무 프로세스</a>
+                              <a href="../board/boardList.html?type=process&pageNo=1"><i class=" fa fa-refresh"></i> 업무 프로세스</a>
                           </li>
                           <li>
-                              <a href="#"><i class=" fa fa-book"></i> 제품 관련 용어 정리</a>
+                              <a href="../board/boardList.html?type=product_term&pageNo=1"><i class=" fa fa-book"></i> 제품 관련 용어 정리</a>
                           </li>
                           <li>
-                              <a href="#"><i class=" fa fa-ban"></i> 익명 게시판</a>
+                              <a href="../board/boardList.html?type=no_name&pageNo=1"><i class=" fa fa-ban"></i> 익명 게시판</a>
                           </li>
                           <li>
-                              <a href="#"><i class=" fa fa-comment-o"></i> 자유 게시판</a>
+                              <a href="../board/boardList.html?type=free&pageNo=1"><i class=" fa fa-comment-o"></i> 자유 게시판</a>
                           </li>
                           <li>
-                              <a href="#"><i class=" fa fa-desktop"></i> PC 도움방</a>
+                              <a href="../board/boardList.html?type=pc_helper&pageNo=1"><i class=" fa fa-desktop"></i> PC 도움방</a>
                           </li>
                           <li>
-                              <a href="#"><i class=" fa fa-internet-explorer"></i> 업무 관련 사이트</a>
+                              <a href="../board/boardList.html?type=about_work_site&pageNo=1"><i class=" fa fa-internet-explorer"></i> 업무 관련 사이트</a>
                           </li>
                           <li>
-                              <a href="#"><i class=" fa fa-user-circle-o"></i> 나의 업무 공간</a>
+                              <a href="../board/boardList.html?type=my_place&pageNo=1"><i class=" fa fa-user-circle-o"></i> 나의 업무 공간</a>
                           </li>
                           <li style="display: none;" class="admin_menu"><a href="../admin/adminUserList.html">관리자 페이지</a>
 							<ul class="admin_content" >
