[Board] write_add 해결해야함..

--- a/src/main/webapp/board/noticeBoardReg.html
+++ b/src/main/webapp/board/noticeBoardReg.html
@@ -7,15 +7,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <title>MainPage</title>
-<script src="../node_modules/jquery/dist/jquery.min.js"></script>
-<script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="../node_modules/handlebars/handlebars-v4.0.11.js"></script>
-<script src="../lib/js/jquery.chained.min.js"></script>
-<script type="text/javascript"
-	src="../tinymce/js/tinymce/tinymce.min.js"></script>
+<script data-main="../lib/js/require/requireConfig" src="../lib/js/require/require.js"></script>
+<script src="../lib/jquery/dist/jquery.min.js"></script>
+<script src="../lib/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="../lib/js/board/board_reg.js"></script>
-<link href="../node_modules/bootstrap/dist/css/bootstrap.min.css"
-	rel="stylesheet" />
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
 <link href="../lib/css/animate.css" rel="stylesheet" />
 <link href="../lib/css/main.css" rel="stylesheet" />
 <link href="../lib/css/board/board_reg.css" rel="stylesheet" />
