--- a/src/main/webapp/board/write_board.html
+++ b/src/main/webapp/board/write_board.html
@@ -9,6 +9,7 @@
 <title>MainPage</title>
 <!-- <script src="../node_modules/handlebars/handlebars-v4.0.11.js"></script> -->
 <script data-main="../lib/js/require/requireConfig" src="../lib/js/require/require.js"></script>
+<script src="../lib/jquery/dist/jquery.min.js"></script>
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
 <script src="../lib/js/ckeditor/ckeditor.js"></script>
 <script src="../lib/js/board/board_reg.js"></script>
@@ -36,8 +37,11 @@
                       </div>
                       <div class="inbox-body">
                          <div class="mail-option required_area">
-                             <div class="chk-all" style="color: red;">
-                                 <input type="checkbox" class="required_check">필독
+                             <div class="chk-all required_wrap" style="color: red;">
+                                 <input type="checkbox" class="required_check required_box">필독
+                             </div>
+                             <div class="chk-all show_wrap" style="color: red; display: none;">
+                                 <input type="checkbox" class="required_check required_box">이름 공개
                              </div>
 
 
