--- a/src/main/webapp/common_html/gnb.html
+++ b/src/main/webapp/common_html/gnb.html
@@ -19,7 +19,12 @@
 
 <!--                   <aside class="sm-side"> -->
                       <div class="user-head">
+                         <div class="home_btn">
+<!--                          	<a href="../main/Mainpage.html">HQTECH</a> -->
+
+                         </div>
                           <div class="user-info">
+                          	  <a href="../main/Mainpage.html"><i class="fa fa-home home_icon" aria-hidden="true"></i></a>
                               <h5><a href="#" class="user_name"></a></h5>
                               <span><a href="#" class="user_position"></a></span>
                           </div>
