--- a/src/main/webapp/board/boardList.html
+++ b/src/main/webapp/board/boardList.html
@@ -103,7 +103,7 @@
 							{{#data.require}}
                               <tr class="" style="background: blanchedalmond;">
                                   <td class="inbox-small-cells board_no">-</td>
-                                  <td class="view-message view-message"><span style="color:red;">[필독]</span>{{title}}<span class="label label-info">family</span></td>
+                                  <td class="view-message view-message"><a href="board_detail.html?no={{boardNo}}"><span style="color:red;">[필독]</span>{{title}}</a><span class="label label-info">family</span></td>
                                   <td class="view-message dont-show">{{userName}}</td>
                                   <td class="view-message inbox-small-cells"><i class="fa fa-paperclip"></i></td>
                                   <td class="view-message text-right" style="text-align: center;">{{date}}</td>
@@ -113,7 +113,7 @@
 							{{#data.noReq}}
                               <tr class="">
                                   <td class="inbox-small-cells board_no">{{showNo}}</td>
-                                  <td class="view-message view-message">{{title}}<span class="label label-info">family</span></td>
+                                  <td class="view-message view-message"><a href="board_detail.html?no={{boardNo}}">{{title}}</a><span class="label label-info">family</span></td>
                                   <td class="view-message dont-show">{{userName}}</td>
                                   <td class="view-message inbox-small-cells"><i class="fa fa-paperclip"></i></td>
                                   <td class="view-message text-right" style="text-align: center;">{{date}}</td>
