--- a/src/main/webapp/board/noticeBoardDetail.html
+++ b/src/main/webapp/board/noticeBoardDetail.html
@@ -8,8 +8,8 @@
 
 <title>MainPage</title>
 
-<script src="../node_modules/jquery/dist/jquery.min.js"></script>
-<script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="../lib/jquery/dist/jquery.min.js"></script>
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
 <script src="../node_modules/handlebars/handlebars-v4.0.11.js"></script>
 <script src="../lib/js/common.js"></script>
 <script src="../node_modules/handlebars/handlebars-v4.0.11.js"></script>
