[Board] 글쓰기 페이지 수정 기능 추가

--- a/src/main/webapp/board/write_board.html
+++ b/src/main/webapp/board/write_board.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <title>MainPage</title>
-<!-- <script src="../node_modules/handlebars/handlebars-v4.0.11.js"></script> -->
 <script data-main="../lib/js/require/requireConfig" src="../lib/js/require/require.js"></script>
 <script src="../lib/jquery/dist/jquery.min.js"></script>
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
@@ -76,7 +74,7 @@
 				<td>작성자</td>
 				<td style="width: 25%;" class="user_name"></td>
 				<td style="width: 20%;">작성일</td>
-				<td class="current_date"></td>
+				<td class="cre_dt"></td>
 				<td>
 					<select id="category_list_notice" style="width: 85%; height: 70%; color: black;">
 						<option class="notice" value="team_notice">팀 내부 공지사항</option>
