[board] 글쓰기시 파일 첨부 (서버에서 받는것까지만 구현함. todo: 이후 로직)

--- a/src/main/webapp/board/write_board.html
+++ b/src/main/webapp/board/write_board.html
@@ -102,6 +102,7 @@
 				<td colspan="5"
 					style="text-align: left; padding: 30px 15px 30px 15px; background: floralwhite;">
 					<textarea class="write_desc_area" id="description" name="write_desc"></textarea>
+					<input type="file" id="InputFile" class="file_area btn btn-info" multiple>
 				</td>
 			</tr>
 			<tr class="btn_area">
