--- a/src/main/webapp/board/board_detail.html
+++ b/src/main/webapp/board/board_detail.html
@@ -65,6 +65,14 @@
 							<input type="submit" class="btn btn-info modify_btn login_user_btn" onclick="javascript: moveToUpdate();" value="수정">
 						</td>
 					</tr>
+					<tr class="file_area">
+						<td>
+							<div class="file_title">첨부파일: </div>
+						</td>
+						<td colspan="5">
+							<div class="file_contents" style="text-align: left; margin-left: 15px;"></div>						
+						</td>
+					</tr>
 			        
 			        <!-- 댓글 부분 -->
 			        <tbody class="tmp">
