[board] 글쓰기페이지에 삭제 기능 추가 중

--- a/src/main/webapp/board/write_board.html
+++ b/src/main/webapp/board/write_board.html
@@ -105,6 +105,14 @@
 					<input type="file" id="InputFile" class="file_area btn btn-info" multiple>
 				</td>
 			</tr>
+			<tr class="file_area" style="display: none;">
+						<td>
+							<div class="file_title">첨부파일: </div>
+						</td>
+						<td colspan="5">
+							<div class="file_contents" style="text-align: left; margin-left: 15px;"></div>						
+						</td>
+			</tr>
 			<tr class="btn_area">
 				<td colspan="5">
 				<input type="submit" class="btn btn-info modify_btn" onclick="javascript: write_update(); return false;" value="수정">
