[Common] 버그 사항 수정 및 메인페이지 작업 중

--- a/src/main/webapp/common_html/gnb.html
+++ b/src/main/webapp/common_html/gnb.html
@@ -24,7 +24,7 @@
 
                          </div>
                           <div class="user-info">
-                          	  <a href="../main/Mainpage.html"><i class="fa fa-home home_icon" aria-hidden="true"></i></a>
+                          	  <a href="#"><i class="fa fa-home home_icon" aria-hidden="true"></i></a>
                               <h5><a href="#" class="user_name"></a></h5>
                               <span><a href="#" class="user_position"></a></span>
                           </div>
